<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.truckers.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.truckers.ui.gallery.GalleryFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.truckers.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/activity_register" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.truckers.ui.tools.ToolsFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.truckers.ui.share.ShareFragment"
        android:label="@string/menu_logout" />

</navigation>