<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.RegisterActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <ImageButton
                android:id="@+id/register_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="@color/background"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/form_logo"
            android:layout_width="50dp"
            android:layout_height="70dp"
            />

        <EditText
            android:id="@+id/register_email_field"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/register_password_field"
            android:layout_width="236dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginEnd="51dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:hint="@string/password_hint"/>

        <EditText
            android:id="@+id/check_password_field"
            android:layout_width="236dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:hint="@string/password_check"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="46dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_image_label" />

            <ImageView
                android:id="@+id/register_profile_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/media_filename_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>

            <ImageButton
                android:id="@+id/select_media_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_perm_media_black_24dp"
                android:background="@color/background"
                android:layout_marginLeft="20dp"/>

            <ImageButton
                android:id="@+id/use_camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:background="@color/background"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/register"
            android:textColor="@color/button_font"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>