<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <ImageButton
                android:id="@+id/login_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="@color/background"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="214dp"
            android:layout_height="214dp"
            android:src="@drawable/truck_logo"/>

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="236dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="76dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:hint="@string/password_hint"/>



        <Button
            android:id="@+id/login_btn"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:text="@string/login"
            android:textColor="@color/button_font"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>